deploy/k8s/deployment-random-number-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: random-number-service
  name: random-number-service
  namespace: lotto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-number-service
  template:
    metadata:
      labels:
        app: random-number-service
    spec:
      containers:
      - image: dlindemann/randomnumberservice:0.0.1
        name: randomnumberservice
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
