deploy/k8s/lotto-service-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: lotto-service-api
spec:
    replicas: 2
    selector:
        matchLabels:
            app: lotto-service-api
    template:
        metadata:
            labels:
                app: lotto-service-api
        spec:
            containers:
                -   name: lotto-service-api
                    image: localhost:4999/lottoservice
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 80 # the application listens to this port
                    resources:
                        requests: # minimum resources required
                            cpu: 100m
                            memory: 64Mi
                        limits: # maximum resources allocated
                            cpu: 250m
                            memory: 256Mi
