deploy/k8s/lotto-service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: lotto-service-api
spec:
    selector:
        app: lotto-service-api
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
