deploy/k8s/service-lotto-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lotto-service
  name: lotto-service
  namespace: lotto
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: lotto-service
