deploy/k8s/service-random-number-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: random-number-service
  name: random-number-service
  namespace: lotto
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: random-number-service
