deploy/k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: lotto
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: web
